--- a/index.html
+++ b/index.html
@@ -130,16 +130,46 @@
 									<th>Venue</th>
 								</tr>
 								<tr>
-									<td>Movement Director / Shadow Puppeteer</td>
+									<td>Narrator</td>
 									<td>Colours of Music: Maui and the Sun</td>
 									<td>Honor Pallant</td>
 									<td>Albemarle Music Centre</td>
+								</tr>
+								<tr>
+									<td>Christella</td>
+									<td>Christmas Card for the World</td>
+									<td>Honor Pallant</td>
+									<td>Spin Off Productions - TIE tour</td>
+								</tr>
+								<tr>
+									<td>Greetella</td>
+									<td>Greetings Card for the World</td>
+									<td>Honor Pallant</td>
+									<td>Spin Off Productions - Pop Art Gallery</td>
+								</tr>
+								<tr>
+									<td>Hannah</td>
+									<td>Mythical Maze</td>
+									<td>Honor Pallant</td>
+									<td>Spin Off Productions - TIE tour</td>
+								</tr>
+								<tr>
+									<td>Greetella</td>
+									<td>Welcome to the World</td>
+									<td>Honor Pallant</td>
+									<td>Spin Off Productions - Freedom Festival</td>
 								</tr>
 								<tr>
 									<td>Movement Director / Shadow Puppeteer</td>
 									<td>Colours of Music: Too-too-moo</td>
 									<td>Honor Pallant</td>
 									<td>Albemarle Music Centre</td>
+								</tr>
+								<tr>
+									<td>Miss Print / Shadow Puppeteer</td>
+									<td>Creepy House</td>
+									<td>Gerald Fox</td>
+									<td>Spin Off Productions - TIE tour</td>
 								</tr>
 								<tr>
 									<td>Shadow Puppeteer</td>
@@ -161,9 +191,9 @@
 								</tr>
 								<tr>
 									<td>Jesus</td>
-									<td>Godspell (<em>rural tour</em>)</td>
+									<td>Godspell</td>
 									<td>Alex Howarth</td>
-									<td>Patch of Blue Theatre</td>
+									<td>Patch of Blue Theatre - Rural Tour</td>
 								</tr>
 								<tr>
 									<td>Little Red Riding Hood</td>
@@ -172,6 +202,16 @@
 									<td>Oxford School of Drama</td>
 								</tr>
 							</table>
+
+							<p><strong>Accents:</strong> Hull*, Standard English, General American</p>
+
+							<p><strong>Music:</strong> Soprano, Choral singing, Flute</p>
+
+							<p><strong>Dance:</strong> Ballet, Jazz, Tap, Contemporary</p>
+
+							<p><strong>Other:</strong> Stage Combat (APC Basic level Single sword/ Knife/ Unarmed), Puppetry, Shadow puppetry, Street theatre</p>
+
+							<p>Recipient of the Andrew Lloyd Webber scholarship on the musical theatre foundation course at the Oxford School of Drama</p>
 
 						</div>
 					</div>
@@ -190,8 +230,8 @@
 				<article class="full">
 					<div class="decoration">
 						<div class="fotorama detail" data-nav="thumbs" data-arrows="false" data-maxheight="500px" data-allowfullscreen="native">
-							<img src="/images/gallery/headshot-1.jpg">
-							<img src="/images/gallery/headshot-2.jpg">
+							<img src="/images/gallery/headshot-1.jpg" data-caption="Photo by Anna Brochmann">
+							<img src="/images/gallery/headshot-2.jpg" data-caption="Photo by Anna Brochmann">
 							<img src="/images/gallery/tv.jpg">
 						</div>
 					</div>
