colour changes and vimeo embed

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 				<li><a href="#intro">Emily</a></li>
 				<li><a href="#about">About</a></li>
 				<li><a href="#cv">CV</a></li>
+				<li><a href="#media">Media</a></li>
 				<li><a href="#gallery">Gallery</a></li>
 				<li><a href="#contact">Contact</a></li>
 			</ul>
@@ -240,6 +241,12 @@
 		</section>
 		</main>
 
+		<section id="media">
+			<div class="inner">
+				<iframe src="https://player.vimeo.com/video/131139082?title=0&byline=0&portrait=0" width="1440" height="809" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+			</div>
+		</section>
+
 		<section id="contact" class="slide">
 			<div class="inner">
 
@@ -272,12 +279,11 @@
 
 	</div>
 
-	<!-- //ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js -->
 	<script src="/javascripts/jquery.min.js"></script>
 	<script src="/javascripts/jquery.scrollTo.js"></script>
+	<script src="/javascripts/jquery.fitvids.js"></script>
 	<script src="/javascripts/global.js"></script>
 
-	<!-- http://html5shim.googlecode.com/svn/trunk/html5.js -->
 	<!--[if lt IE 9]>
 		<script src="/javascripts/html5.js" type="text/javascript" charset="utf-8"></script>
 	<![endif]-->
