--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 	<link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet">
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,300italic' rel='stylesheet' type='text/css'>
-	<link href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
+	<link href="//cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
 
 	<link rel="shortcut icon" href="/images/favicon.ico?v=2">
 	<link rel="apple-touch-icon-precomposed" href="/favicon-152.png">
@@ -30,8 +30,8 @@
 			<ul class="depth_0">
 				<li><a href="#intro">Emily</a></li>
 				<li><a href="#about">About</a></li>
-				<li><a href="#cv">CV</a></li>
 				<li><a href="#media">Media</a></li>
+				<li><a href="#cv">CV</a></li>
 				<li><a href="#gallery">Gallery</a></li>
 				<li><a href="#contact">Contact</a></li>
 			</ul>
@@ -45,7 +45,7 @@
 						</div>
 						<div class="half right">
 							<div class="info-box">
-								<img src="/images/emily-kingston.png" alt="Emily Kingston - Actor">
+								<img src="/images/logo.png" alt="Emily Kingston - Actor">
 								<hr>
 								<p>Emily is originally from Hull and based in the North West. She is currently training at the Liverpool Institute for Performing Arts and will be graduating in 2016</p>
 								<button><a href="#about">About Me</a></button>
@@ -71,6 +71,12 @@
 					 <p>I also work as a shadow puppeteer and an actor in community theatre in both mainstream and special schools.</p>
 					</div>
 				</div>
+			</div>
+		</section>
+
+		<section id="media">
+			<div class="inner">
+				<iframe src="https://player.vimeo.com/video/131139082?title=0&byline=0&portrait=0" width="1440" height="809" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 			</div>
 		</section>
 
@@ -241,12 +247,6 @@
 		</section>
 		</main>
 
-		<section id="media">
-			<div class="inner">
-				<iframe src="https://player.vimeo.com/video/131139082?title=0&byline=0&portrait=0" width="1440" height="809" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-			</div>
-		</section>
-
 		<section id="contact" class="slide">
 			<div class="inner">
 
@@ -258,13 +258,13 @@
 
 				<div class="half left">
 					<div class="decoration" id="contact">
-						<p class="emphasis"><a id="mail" href="mailto:emily@emilykingston.net" title="Send me an email"><img src="/images/email.png" alt="Email me" class="middle"></a> <span>Email: <a href="mailto:emily@emilykingston.net" title="Send me an email">emily@emilykingston.net</a></span></p>
+						<p class="emphasis"><a href="mailto:emily@emilykingston.net" title="Send me an email"><img src="/images/email.svg" alt="Email me" class="middle"></a> <span>Email: <a href="mailto:emily@emilykingston.net" title="Send me an email">emily@emilykingston.net</a></span></p>
 					</div>
 				</div>
 
 				<div class="half right">
 					<div id="twitter-block" class="decoration">
-						<a class="twitter-timeline" href="https://twitter.com/_EmilyKingston" data-widget-id="549359474746867713">Tweets by @_EmilyKingston</a>
+						<a class="twitter-timeline" href="https://twitter.com/_EmilyKingston" data-widget-id="549359474746867713" data-chrome="nofooter transparent">Tweets by @_EmilyKingston</a>
 					</div>
 				</div>
 			</div>
@@ -290,7 +290,6 @@
 
 	<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script>
-
+	<script src="//cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script>
 </body>
 </html>
