--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
-<!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
-<!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
-<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
+<html lang="en">
 <head>
 
 	<meta charset="utf-8">
@@ -10,16 +7,12 @@
 	<meta name="description" content="Emily Kingston - Actor">
 	<meta name="author" content="Emily Kingston">
 
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet">
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,300italic' rel='stylesheet' type='text/css'>
 	<link href="//cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
-
-	<link rel="shortcut icon" href="/images/favicon.ico?v=2">
-	<link rel="apple-touch-icon-precomposed" href="/favicon-152.png">
-	<meta name="msapplication-TileImage" content="/favicon-152.png">
-
+	
 </head>
 
 <body>
