--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet">
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,300italic' rel='stylesheet' type='text/css'>
 	<link href="//cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
-	
+
 </head>
 
 <body>
@@ -60,7 +60,7 @@
 					<div class="decoration">
 					 <p>I am training at the <a href="http://lipa.ac.uk">Liverpool Institute for Performing Arts</a> and will be graduating in 2016.</p>
 					 <p>I love working on heightened text and have a keen interest in television.</p>
-					 <p>I am currently rehearsing the role of Lydia Litvyak in the new play (Fire) Embers (Ash) written and directed by Hailey Mashburn. Details to be announced soon.</p>
+					 <p>I am currently rehearsing the role of <em>Lydia Litvyak</em> in the new play <em>(Fire) Embers (Ash)</em> written and directed by <a href="http://haileymashburn.weebly.com">Hailey Mashburn</a>. Details to be announced soon.</p>
 					 <p>I also work as a shadow puppeteer and an actor in community theatre in both mainstream and special schools.</p>
 					</div>
 				</div>
