--- a/index.html
+++ b/index.html
@@ -230,6 +230,9 @@
 				<article class="full">
 					<div class="decoration">
 						<div class="fotorama detail" data-nav="thumbs" data-arrows="false" data-maxheight="500px" data-allowfullscreen="native">
+							<img src="/images/gallery/new-headshot-1.jpg" data-caption="Photo by Alexandra Guelff">
+							<img src="/images/gallery/new-headshot-2.jpg" data-caption="Photo by Alexandra Guelff">
+							<img src="/images/gallery/new-headshot-3.jpg" data-caption="Photo by Alexandra Guelff">
 							<img src="/images/gallery/headshot-1.jpg" data-caption="Photo by Anna Brochmann">
 							<img src="/images/gallery/headshot-2.jpg" data-caption="Photo by Anna Brochmann">
 							<img src="/images/gallery/tv.jpg">
@@ -250,7 +253,7 @@
 				</div>
 
 				<div class="half left">
-					<div class="decoration" id="contact">
+					<div class="decoration" id="contact-details">
 						<p class="emphasis"><a href="mailto:emily@emilykingston.net" title="Send me an email"><img src="/images/email.svg" alt="Email me" class="middle"></a> <span>Email: <a href="mailto:emily@emilykingston.net" title="Send me an email">emily@emilykingston.net</a></span></p>
 					</div>
 				</div>
