--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					<div class="decoration">
 					 <p>I am training at the <a href="http://lipa.ac.uk">Liverpool Institute for Performing Arts</a> and will be graduating in 2016.</p>
 					 <p>I love working on heightened text and have a keen interest in television.</p>
-					 <p>I am currently rehearsing the role of <em>Lydia Litvyak</em> in the new play <em>(Fire) Embers (Ash)</em> written and directed by <a href="http://haileymashburn.weebly.com">Hailey Mashburn</a>. Details to be announced soon.</p>
+					 <p>Appearing as Holly in '13' at LIPA in the Paul McCartney Auditorium, 19th - 21st November 2015</p>
 					 <p>I also work as a shadow puppeteer and an actor in community theatre in both mainstream and special schools.</p>
 					</div>
 				</div>
@@ -97,13 +97,13 @@
 									<td>Liz</td>
 									<td>Party Time</td>
 									<td>Gari Jones</td>
-									<td>Sennheiser Studio Theatre</td>
+									<td>LIPA</td>
 								</tr>
 								<tr>
 									<td>Fluellen / Duke of Orleans</td>
 									<td>Henry V</td>
 									<td>Judith McSpadden</td>
-									<td>Paul McCartney Auditorium</td>
+									<td>LIPA</td>
 								</tr>
 								<tr>
 									<td>W</td>
@@ -116,6 +116,12 @@
 									<td>The Crucible</td>
 									<td>Keith Woodason</td>
 									<td>LIPA</td>
+								</tr>
+								<tr>
+									<td>Lydia Litvyak</td>
+									<td>(Fire) Embers (Ash)</td>
+									<td>Hailey Mashburn</td>
+									<td>LIPA ISB</td>
 								</tr>
 
 							</table>
@@ -131,7 +137,7 @@
 								</tr>
 								<tr>
 									<td>Narrator</td>
-									<td>Colours of Music: Maui and the Sun</td>
+									<td>Maui and the Sun</td>
 									<td>-</td>
 									<td>Albemarle Music Centre</td>
 								</tr>
@@ -139,37 +145,37 @@
 									<td>Christella</td>
 									<td>Christmas Card for the World</td>
 									<td>Honor Pallant</td>
-									<td>Spin Off Productions - TIE tour</td>
+									<td>Spin Off Productions</td>
 								</tr>
 								<tr>
 									<td>Greetella</td>
 									<td>Greetings Card for the World</td>
 									<td>Honor Pallant</td>
-									<td>Spin Off Productions - Pop Art Gallery</td>
+									<td>Spin Off Productions</td>
 								</tr>
 								<tr>
 									<td>Hannah</td>
 									<td>Mythical Maze</td>
 									<td>Honor Pallant</td>
-									<td>Spin Off Productions - TIE tour</td>
+									<td>Spin Off Productions</td>
 								</tr>
 								<tr>
 									<td>Greetella</td>
 									<td>Welcome to the World</td>
 									<td>Honor Pallant</td>
-									<td>Spin Off Productions - Freedom Festival</td>
+									<td>Spin Off Productions</td>
 								</tr>
 								<tr>
-									<td>Movement Director / Shadow Puppeteer</td>
-									<td>Colours of Music: Too-too-moo</td>
+									<td>Shadow Puppeteer</td>
+									<td>Too-too-moo and the Giant</td>
 									<td>-</td>
 									<td>Albemarle Music Centre</td>
 								</tr>
 								<tr>
-									<td>Miss Print / Shadow Puppeteer</td>
+									<td>Shadow Puppeteer</td>
 									<td>Creepy House</td>
 									<td>Gerald Fox</td>
-									<td>Spin Off Productions - TIE tour</td>
+									<td>Spin Off Productions</td>
 								</tr>
 								<tr>
 									<td>Shadow Puppeteer</td>
@@ -197,19 +203,20 @@
 								</tr>
 								<tr>
 									<td>Little Red Riding Hood</td>
-									<td>Into the Woods (<em>workshop production</em>)</td>
+									<td>Into the Woods</td>
 									<td>Louise Shephard</td>
 									<td>Oxford School of Drama</td>
 								</tr>
 							</table>
 
-							<p><strong>Accents:</strong> Hull*, Standard English, General American</p>
+							<p><strong>Accents:</strong> Hull*, Yorkshire*, RP, General American, Manchester, Welsh (South)<br>
+							<small><em>* Native</em></small></p>
 
 							<p><strong>Music:</strong> Soprano, Choral singing, Flute</p>
 
 							<p><strong>Dance:</strong> Ballet, Jazz, Tap, Contemporary</p>
 
-							<p><strong>Other:</strong> Stage Combat (APC Basic level Single sword/ Knife/ Unarmed), Puppetry, Shadow puppetry, Street theatre</p>
+							<p><strong>Other:</strong> Stage Combat (APC Actor Combatant-Basic (18th C Smallsword), APC Actor Combatant-Basic (Knife), APC Actor Combatant-Basic (Unarmed)), Puppetry, Shadow puppetry</p>
 
 							<p>Recipient of the Andrew Lloyd Webber scholarship on the musical theatre foundation course at the Oxford School of Drama</p>
 
@@ -230,9 +237,12 @@
 				<article class="full">
 					<div class="decoration">
 						<div class="fotorama detail" data-nav="thumbs" data-arrows="false" data-maxheight="500px" data-allowfullscreen="native">
-							<img src="/images/gallery/new-headshot-1.jpg" data-caption="Photo by Alexandra Guelff">
-							<img src="/images/gallery/new-headshot-2.jpg" data-caption="Photo by Alexandra Guelff">
-							<img src="/images/gallery/new-headshot-3.jpg" data-caption="Photo by Alexandra Guelff">
+							<img src="/images/gallery/headshot-1.jpg" data-caption="Photo by Alexandra Guelff">
+							<img src="/images/gallery/headshot-1-bw.jpg" data-caption="Photo by Alexandra Guelff">
+							<img src="/images/gallery/headshot-2.jpg" data-caption="Photo by Alexandra Guelff">
+							<img src="/images/gallery/headshot-2-bw.jpg" data-caption="Photo by Alexandra Guelff">
+							<img src="/images/gallery/headshot-3.jpg" data-caption="Photo by Alexandra Guelff">
+							<img src="/images/gallery/headshot-3-bw.jpg" data-caption="Photo by Alexandra Guelff">
 							<img src="/images/gallery/tv.jpg">
 						</div>
 					</div>
@@ -253,6 +263,7 @@
 				<div class="half left">
 					<div class="decoration" id="contact-details">
 						<p class="emphasis"><a href="mailto:emily@emilykingston.net" title="Send me an email"><img src="/images/email.svg" alt="Email me" class="middle"></a> <span>Email: <a href="mailto:emily@emilykingston.net" title="Send me an email">emily@emilykingston.net</a></span></p>
+						<p class="emphasis"><a href="https://www.spotlight.com/interactive/cv/19/F201842.html" title="Visit my Spotlight page"><img src="/images/spotlight.png" alt="Visit my Spotlight page" class="middle"></a> <span><a href="https://www.spotlight.com/interactive/cv/19/F201842.html" title="Visit my Spotlight page">Spotlight Profile</a> <small><em>PIN: 2852-0198-9068</em></small> </span></p>
 					</div>
 				</div>
 
