--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
 					<div class="decoration">
 					 <p>I am training at the <a href="http://lipa.ac.uk">Liverpool Institute for Performing Arts</a> and will be graduating in 2016.</p>
 					 <p>I love working on heightened text and have a keen interest in television.</p>
-					 <p>Appearing as Holly in '13' at LIPA in the Paul McCartney Auditorium, 19th - 21st November 2015</p>
-					 <p>I also work as a shadow puppeteer and an actor in community theatre in both mainstream and special schools.</p>
+					 <p>I am appearing as Holly in '13' at LIPA in the Paul McCartney Auditorium, 19th - 21st November 2015</p>
 					</div>
 				</div>
 			</div>
@@ -117,13 +116,6 @@
 									<td>Keith Woodason</td>
 									<td>LIPA</td>
 								</tr>
-								<tr>
-									<td>Lydia Litvyak</td>
-									<td>(Fire) Embers (Ash)</td>
-									<td>Hailey Mashburn</td>
-									<td>LIPA ISB</td>
-								</tr>
-
 							</table>
 
 							<h3>Professional Experience</h3>
@@ -194,6 +186,12 @@
 									<th>Play</th>
 									<th>Director</th>
 									<th>Venue</th>
+								</tr>
+								<tr>
+									<td>Lydia Litvyak</td>
+									<td>(Fire) Embers (Ash)</td>
+									<td>Hailey Mashburn</td>
+									<td>St James Gardens</td>
 								</tr>
 								<tr>
 									<td>Jesus</td>
