updated copy/gallery and removed cv

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 			<ul class="depth_0">
 				<li><a href="#intro">Emily</a></li>
 				<li><a href="#about">About</a></li>
-				<li><a href="#media">Media</a></li>
-				<li><a href="#cv">CV</a></li>
+				<li><a href="#media">Video</a></li>
+				<li><a href="https://www.spotlight.com/interactive/cv/19/F201842.html">Spotlight</a></li>
 				<li><a href="#gallery">Gallery</a></li>
 				<li><a href="#contact">Contact</a></li>
 			</ul>
@@ -40,7 +40,7 @@
 							<div class="info-box">
 								<img src="/images/logo.png" alt="Emily Kingston - Actor">
 								<hr>
-								<p>Emily is originally from Hull and based in the North West. She is currently training at the Liverpool Institute for Performing Arts and will be graduating in 2016</p>
+								<p>Emily is currently training at the Liverpool Institute for Performing Arts and will be graduating in 2016</p>
 								<button><a href="#about">About Me</a></button>
 							</div>
 						</div>
@@ -58,9 +58,9 @@
 				</div>
 				<div class="full">
 					<div class="decoration">
-					 <p>I am training at the <a href="http://lipa.ac.uk">Liverpool Institute for Performing Arts</a> and will be graduating in 2016.</p>
-					 <p>I love working on heightened text and have a keen interest in television.</p>
-					 <p>I am appearing as Holly in '13' at LIPA in the Paul McCartney Auditorium, 19th - 21st November 2015</p>
+						<p>Emily has been hooked on acting since her turn as a prostitute in ‘The Best Little Whorehouse in Texas’ with her youth group(!) back home in Hull.</p>
+						<p>She went on to complete the musical theatre course at the <a href="http://oxforddrama.ac.uk">Oxford School of Drama</a>, where she was the recipient of the Andrew Lloyd Webber scholarship, before training at <a href="http://lipa.ac.uk">LIPA</a>.</p>
+						<p>At LIPA Emily has grown as an actor and she hopes to continue building on the skills she has learnt at drama school after graduation.</p>
 					</div>
 				</div>
 			</div>
@@ -68,129 +68,7 @@
 
 		<section id="media">
 			<div class="inner">
-				<iframe src="https://player.vimeo.com/video/131139082?title=0&byline=0&portrait=0" width="1440" height="809" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-			</div>
-		</section>
-
-		<section id="cv" class="slide">
-			<div class="inner">
-				<header class="full">
-					<div class="decoration">
-						<h1 class="centred"><span>CV</span></h1>
-					</div>
-				</header>
-
-				<article class="full">
-					<div class="decoration">
-						<div class="detail">
-							<h3>Roles in Training</h3>
-
-							<table>
-								<tr class="header">
-									<th>Role</th>
-									<th>Play</th>
-									<th>Director</th>
-									<th>Venue</th>
-								</tr>
-								<tr>
-									<td>Liz</td>
-									<td>Party Time</td>
-									<td>Gari Jones</td>
-									<td>LIPA</td>
-								</tr>
-								<tr>
-									<td>Fluellen / Duke of Orleans</td>
-									<td>Henry V</td>
-									<td>Judith McSpadden</td>
-									<td>LIPA</td>
-								</tr>
-								<tr>
-									<td>W</td>
-									<td>Lungs (<em>radio</em>)</td>
-									<td>Marina Caldarone</td>
-									<td>LIPA</td>
-								</tr>
-								<tr>
-									<td>Mary Warren</td>
-									<td>The Crucible</td>
-									<td>Keith Woodason</td>
-									<td>LIPA</td>
-								</tr>
-							</table>
-
-							<h3>Professional Experience</h3>
-
-							<table>
-								<tr class="header">
-									<th>Role</th>
-									<th>Play</th>
-									<th>Director</th>
-									<th>Venue</th>
-								</tr>
-								<tr>
-									<td>Shadow Puppeteer</td>
-									<td>Too-too-moo and the Giant</td>
-									<td>-</td>
-									<td>Albemarle Music Centre</td>
-								</tr>
-								<tr>
-									<td>Shadow Puppeteer</td>
-									<td>Creepy House</td>
-									<td>Gerald Fox</td>
-									<td>Spin Off Productions</td>
-								</tr>
-								<tr>
-									<td>Shadow Puppeteer</td>
-									<td>Aladdin</td>
-									<td>Haviel Perdana</td>
-									<td>Indigo Moon Theatre</td>
-								</tr>
-							</table>
-
-
-							<h3>Other Experience</h3>
-
-							<table>
-								<tr class="header">
-									<th>Role</th>
-									<th>Play</th>
-									<th>Director</th>
-									<th>Venue</th>
-								</tr>
-								<tr>
-									<td>Lydia Litvyak</td>
-									<td>(Fire) Embers (Ash)</td>
-									<td>Hailey Mashburn</td>
-									<td>St James Gardens</td>
-								</tr>
-								<tr>
-									<td>Jesus</td>
-									<td>Godspell</td>
-									<td>Alex Howarth</td>
-									<td>Patch of Blue Theatre - Rural Tour</td>
-								</tr>
-								<tr>
-									<td>Little Red Riding Hood</td>
-									<td>Into the Woods</td>
-									<td>Louise Shephard</td>
-									<td>Oxford School of Drama</td>
-								</tr>
-							</table>
-
-							<p><strong>Accents:</strong> Hull*, Yorkshire*, RP, General American, Manchester, Welsh (South)<br>
-							<small><em>* Native</em></small></p>
-
-							<p><strong>Music:</strong> Soprano, Choral singing, Flute</p>
-
-							<p><strong>Dance:</strong> Ballet, Jazz, Tap, Contemporary</p>
-
-							<p><strong>Other:</strong> Stage Combat (APC Actor Combatant-Basic (18th C Smallsword), APC Actor Combatant-Basic (Knife), APC Actor Combatant-Basic (Unarmed)), Puppetry, Shadow puppetry</p>
-
-							<p>Recipient of the Andrew Lloyd Webber scholarship on the musical theatre foundation course at the Oxford School of Drama</p>
-
-						</div>
-					</div>
-				</article>
+				<iframe src="https://player.vimeo.com/video/150102341?title=0&byline=0&portrait=0" width="1440" height="809" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 			</div>
 		</section>
 
@@ -205,12 +83,10 @@
 				<article class="full">
 					<div class="decoration">
 						<div class="fotorama detail" data-nav="thumbs" data-arrows="false" data-maxheight="500px" data-allowfullscreen="native">
+							<img src="/images/gallery/headshot-4.jpg" data-caption="Photo by Alexandra Guelff">
 							<img src="/images/gallery/headshot-1.jpg" data-caption="Photo by Alexandra Guelff">
-							<img src="/images/gallery/headshot-1-bw.jpg" data-caption="Photo by Alexandra Guelff">
-							<img src="/images/gallery/headshot-2.jpg" data-caption="Photo by Alexandra Guelff">
 							<img src="/images/gallery/headshot-2-bw.jpg" data-caption="Photo by Alexandra Guelff">
 							<img src="/images/gallery/headshot-3.jpg" data-caption="Photo by Alexandra Guelff">
-							<img src="/images/gallery/headshot-3-bw.jpg" data-caption="Photo by Alexandra Guelff">
 							<img src="/images/gallery/tv.jpg">
 						</div>
 					</div>
