updated about copy

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				</div>
 				<div class="full">
 					<div class="decoration">
-						<p>Emily has been hooked on acting since her turn as a prostitute in ‘The Best Little Whorehouse in Texas’ with her youth group(!) back home in Hull.</p>
+						<p>Emily has been hooked on acting since her first role onstage in her home town of Hull.</p>
 						<p>She went on to complete the musical theatre course at the <a href="http://oxforddrama.ac.uk">Oxford School of Drama</a>, where she was the recipient of the Andrew Lloyd Webber scholarship, before training at <a href="http://lipa.ac.uk">LIPA</a>.</p>
 						<p>At LIPA Emily has grown as an actor and she hopes to continue building on the skills she has learnt at drama school after graduation.</p>
 					</div>
