--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							<div class="info-box">
 								<img src="/images/logo.png" alt="Emily Kingston - Actor">
 								<hr>
-								<p>Emily is currently training at the Liverpool Institute for Performing Arts and will be graduating in 2016</p>
+								<p>I'm currently training at the Liverpool Institute for Performing Arts and will be graduating in 2016</p>
 								<button><a href="#about">About Me</a></button>
 							</div>
 						</div>
@@ -58,9 +58,9 @@
 				</div>
 				<div class="full">
 					<div class="decoration">
-						<p>Emily has been hooked on acting since her first role onstage in her home town of Hull.</p>
-						<p>She went on to complete the musical theatre course at the <a href="http://oxforddrama.ac.uk">Oxford School of Drama</a>, where she was the recipient of the Andrew Lloyd Webber scholarship, before training at <a href="http://lipa.ac.uk">LIPA</a>.</p>
-						<p>At LIPA Emily has grown as an actor and she hopes to continue building on the skills she has learnt at drama school after graduation.</p>
+						<p>I have been hooked on acting since my first role onstage in my home town of Hull.</p>
+						<p>I went on to complete the musical theatre course at the <a href="http://oxforddrama.ac.uk">Oxford School of Drama</a>, where I was the recipient of the Andrew Lloyd Webber scholarship, before training at <a href="http://lipa.ac.uk">LIPA</a>.</p>
+						<p>At LIPA I have grown as an actress and I hope to continue building on the skills I've learned at drama school now as a graduate.</p>
 					</div>
 				</div>
 			</div>
