--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 
 	<meta charset="utf-8">
-	<title>Emily Kingston - Actor</title>
-	<meta name="description" content="Emily Kingston - Actor">
+	<title>Emily Kingston - Actress</title>
+	<meta name="description" content="Emily Kingston - Actress">
 	<meta name="author" content="Emily Kingston">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -34,11 +34,11 @@
 			<div class="inner">
 				<div class="full decoration">
 						<div class="half left">
-							<img src="/images/headshot-intro.jpg" alt="Emily Kingston - Actor">
+							<img src="/images/headshot-intro.jpg" alt="Emily Kingston - Actress">
 						</div>
 						<div class="half right">
 							<div class="info-box">
-								<img src="/images/logo.png" alt="Emily Kingston - Actor">
+								<img src="/images/logo.png" alt="Emily Kingston - Actress">
 								<hr>
 								<p>I'm currently training at the Liverpool Institute for Performing Arts and will be graduating in 2016</p>
 								<button><a href="#about">About Me</a></button>
