added voice reel and other little amends

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 				<li><a href="#intro">Emily</a></li>
 				<li><a href="#about">About</a></li>
 				<li><a href="#media">Video</a></li>
-				<li><a href="https://www.spotlight.com/interactive/cv/19/F201842.html">Spotlight</a></li>
+				<li><a href="#audio">Voice Reel</a></li>
 				<li><a href="#gallery">Gallery</a></li>
+				<li><a href="https://www.spotlight.com/interactive/cv/19/F201842.html">Spotlight</a></li>
 				<li><a href="#contact">Contact</a></li>
 			</ul>
 		</nav>
@@ -33,14 +34,14 @@
 		<section id="intro" class="slide">
 			<div class="inner">
 				<div class="full decoration">
-						<div class="half left">
+						<div class="headshot half left">
 							<img src="/images/headshot-intro.jpg" alt="Emily Kingston - Actress">
 						</div>
 						<div class="half right">
 							<div class="info-box">
 								<img src="/images/logo.png" alt="Emily Kingston - Actress">
 								<hr>
-								<p>I'm currently training at the Liverpool Institute for Performing Arts and will be graduating in 2016</p>
+								<p>Liverpool based actress and recent LIPA graduate</p>
 								<button><a href="#about">About Me</a></button>
 							</div>
 						</div>
@@ -69,6 +70,71 @@
 		<section id="media">
 			<div class="inner">
 				<iframe src="https://player.vimeo.com/video/150102341?title=0&byline=0&portrait=0" width="1440" height="809" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+			</div>
+		</section>
+
+		<section id="audio" class="slide">
+			<div class="inner">
+
+				<div class="full divider">
+					<div class="decoration centred">
+						<h1 class="centred"><span>Voice Reel</span></h1>
+
+						<h2 class="centred">Megamix</h3>
+						<audio controls="controls">
+							Your browser does not support the <code>audio</code> element.
+							<source src="/audio/megamix.mp3" type="audio/mp3">
+						</audio>
+					</div>
+				</div>
+
+				<div class="half left">
+					<div class="decoration">
+						<h2>Ads</h2>
+
+						<h3>Aunt Bessies</h3>
+						<audio controls="controls">
+							Your browser does not support the <code>audio</code> element.
+							<source src="/audio/Ad-AuntBessies.mp3" type="audio/mp3">
+						</audio>
+
+						<h3>Häagen-Dazs</h3>
+						<audio controls="controls">
+							Your browser does not support the <code>audio</code> element.
+							<source src="/audio/Ad-HaaganDas.mp3" type="audio/mp3">
+						</audio>
+
+						<h3>Cancer Research</h3>
+						<audio controls="controls">
+							Your browser does not support the <code>audio</code> element.
+							<source src="/audio/Ad-RaceForLife.mp3" type="audio/mp3">
+						</audio>
+					</div>
+				</div>
+
+				<div class="half right">
+					<div class="decoration">
+						<h2>Other</h2>
+
+						<h3>Frida Kahlo <span>documentary excerpt</span></h3>
+						<audio controls="controls">
+							Your browser does not support the <code>audio</code> element.
+							<source src="/audio/Doc-FridaKahlo.mp3" type="audio/mp3">
+						</audio>
+
+						<h3>The Secret Garden <span>novel excerpt</h3>
+						<audio controls="controls">
+							Your browser does not support the <code>audio</code> element.
+							<source src="/audio/Nar-TheSecretGarden.mp3" type="audio/mp3">
+						</audio>
+
+						<h3>AB by Katy Wix <span>monologue</span></h3>
+						<audio controls="controls">
+							Your browser does not support the <code>audio</code> element.
+							<source src="/audio/Dr-AB.mp3" type="audio/mp3">
+						</audio>
+					</div>
+				</div>
 			</div>
 		</section>
 
@@ -121,8 +187,8 @@
 
 		<footer id="site-footer">
 			<div class="decoration inner">
-					<p class="left">Copyright &copy; 2015 Emily Kingston</p>
-					<p class="right">Email: <a href="mailto:emily@emilykingston.net">emily@emilykingston.net</a></p>
+				<p class="left">Copyright &copy; 2015 Emily Kingston</p>
+				<p class="right">Email: <a href="mailto:emily@emilykingston.net">emily@emilykingston.net</a></p>
 			</div>
 		</footer>
 
