--- a/index.html
+++ b/index.html
@@ -54,11 +54,6 @@
 			<div class="inner">
 				<div class="full">
 					<div class="decoration">
-						<h1 class="centred"><span>About</span></h1>
-					</div>
-				</div>
-				<div class="full">
-					<div class="decoration">
 						<p>I have been hooked on acting since my first role onstage in my home town of Hull.</p>
 						<p>I went on to complete the musical theatre course at the <a href="http://oxforddrama.ac.uk">Oxford School of Drama</a>, where I was the recipient of the Andrew Lloyd Webber scholarship, before training at <a href="http://lipa.ac.uk">LIPA</a>.</p>
 						<p>At LIPA I have grown as an actress and I hope to continue building on the skills I've learned at drama school now as a graduate.</p>
@@ -70,6 +65,7 @@
 		<section id="media">
 			<div class="inner">
 				<iframe src="https://player.vimeo.com/video/150102341?title=0&byline=0&portrait=0" width="1440" height="809" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+				<iframe src="https://player.vimeo.com/video/131139082?title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 			</div>
 		</section>
 
