--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<li><a href="#media">Video</a></li>
 				<li><a href="#audio">Voice Reel</a></li>
 				<li><a href="#gallery">Gallery</a></li>
-				<li><a href="https://www.spotlight.com/interactive/cv/19/F201842.html">Spotlight</a></li>
+				<li><a href="https://www.spotlight.com/interactive/cv/2852-0198-9068">Spotlight</a></li>
 				<li><a href="#contact">Contact</a></li>
 			</ul>
 		</nav>
@@ -169,7 +169,7 @@
 				<div class="half left">
 					<div class="decoration" id="contact-details">
 						<p class="emphasis"><a href="mailto:emily@emilykingston.net" title="Send me an email"><img src="/images/email.svg" alt="Email me" class="middle"></a> <span>Email: <a href="mailto:emily@emilykingston.net" title="Send me an email">emily@emilykingston.net</a></span></p>
-						<p class="emphasis"><a href="https://www.spotlight.com/interactive/cv/19/F201842.html" title="Visit my Spotlight page"><img src="/images/spotlight.png" alt="Visit my Spotlight page" class="middle"></a> <span><a href="https://www.spotlight.com/interactive/cv/19/F201842.html" title="Visit my Spotlight page">Spotlight Profile</a> <small><em>PIN: 2852-0198-9068</em></small> </span></p>
+						<p class="emphasis"><a href="https://www.spotlight.com/interactive/cv/2852-0198-9068" title="Visit my Spotlight page"><img src="/images/spotlight.png" alt="Visit my Spotlight page" class="middle"></a> <span><a href="https://www.spotlight.com/interactive/cv/2852-0198-9068" title="Visit my Spotlight page">Spotlight Profile</a> <small><em>PIN: 2852-0198-9068</em></small> </span></p>
 					</div>
 				</div>
 
