updated Liverpool ref to Yorkshire

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 							<div class="info-box">
 								<img src="/images/logo.png" alt="Emily Kingston - Actress">
 								<hr>
-								<p>Liverpool based actress and recent LIPA graduate</p>
+								<p>Yorkshire based actress and recent LIPA graduate</p>
 								<button><a href="#about">About Me</a></button>
 							</div>
 						</div>
